src/test/ui/parser-recovery-3.stderr
error: incorrect close delimiter: `}`
  --> $DIR/parser-recovery-3.rs:19:5
   |
LL |     fn banana(&mut self) {
   |                          - close delimiter possibly meant for this
LL |         fn peach(this: &Self, foo: usize {
   |                 - un-closed delimiter
...
LL |     }
   |     ^ incorrect close delimiter

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `{`
  --> $DIR/parser-recovery-3.rs:15:42
   |
LL |         fn peach(this: &Self, foo: usize {
   |                 -                       -^ expected one of 7 possible tokens here
   |                 |                       |
   |                 |                       help: ...the missing `)` may belong here
   |                 if you meant to close this...

error: expected expression, found `)`
  --> $DIR/parser-recovery-3.rs:19:5
   |
LL |     }
   |     ^ expected expression

error[E0401]: can't use type parameters from outer function
  --> $DIR/parser-recovery-3.rs:15:25
   |
LL | impl A {
   | ---- `Self` type implicitly declared here, by this `impl`
LL |     fn banana(&mut self) {
LL |         fn peach(this: &Self, foo: usize {
   |                         ^^^^
   |                         |
   |                         use of type variable from outer function
   |                         use a type here instead

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0401`.
